# car-insurance-simulator

./: .gitignore  Dockerfile  PRODUCTION_GUIDELINES.md  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/application/: premium_service.py
src/config/: settings.py
src/domain/entities/: car.py
src/domain/services/: premium_calculator.py
src/interfaces/api/: routes.py
src/models/: schemas.py
tests/: conftest.py  test_main.py  test_premium_calculator.py  test_premium_service.py  test_routes.py  test_schemas.py
