[project]
name = "car-insurance-simulator"
version = "0.1.0-dev"
description = "A FastAPI-based car insurance premium simulator"
authors = [
    {name = "Antonio José"}
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic (>=2.11.1,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
